Logo link updated

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <body>
 
     <nav>
-        <img src="https://generous-gray-tmipyfxyr7.edgeone.app/logo.png" alt="Logo" class="nav-logo">
+        <img src="https://image2url.com/r2/default/images/1767247367878-b1c5d043-c78d-4c17-99fc-65978567deef.png" alt="Logo" class="nav-logo">
         <a href="#" onclick="startDownload()" class="btn-download">Get App</a>
     </nav>
 
@@ -391,4 +391,5 @@
     </script>
 
 </body>
+
 </html>
