change the link of drive

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     <script>
         function startDownload() {
             // YOUR DIRECT GOOGLE DRIVE LINK IS HERE
-            const apkUrl = "https://drive.google.com/uc?export=download&id=1JiZTS7A0m7M2J5ZfM-dQVjcT0Ib2Yd88";
+            const apkUrl = "https://drive.google.com/file/d/1nlkad7vC3DwaYCD4uF8czkhdbmcowrjd/view?usp=sharing";
             window.location.href = apkUrl;
         }
 
@@ -393,3 +393,4 @@
 </body>
 
 </html>
+
