photo link updated

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <div class="hero-visual">
             <div class="glow-circle"></div>
             <div class="hero-phone">
-                <img src="image_c5f644.png" alt="App Home">
+                <img src="https://image2url.com/r2/default/images/1767254272163-eeb8c88c-9a2b-4976-9469-a0e78fdf1f07.jpeg" alt="App Home">
             </div>
         </div>
     </header>
@@ -328,9 +328,9 @@
             <h2>Clean Dark Mode</h2>
         </div>
         <div class="gallery-flex">
-            <div class="shot-frame"><img src="image_c5f67d.png" alt="Wallet"></div>
-            <div class="shot-frame"><img src="image_c5f964.png" alt="Withdraw"></div>
-            <div class="shot-frame"><img src="image_c5f9a2.png" alt="Stats"></div>
+            <div class="shot-frame"><img src="https://image2url.com/r2/default/images/1767254417124-8ecb2d48-78f1-4a04-b5f6-72595dfddcfa.jpeg" alt="Wallet"></div>
+            <div class="shot-frame"><img src="https://image2url.com/r2/default/images/1767254453454-b3aaa9ef-a682-4167-b0ad-0382c1165871.jpeg" alt="Withdraw"></div>
+            <div class="shot-frame"><img src="https://image2url.com/r2/default/images/1767254500887-12db2735-4ca3-4891-ba2f-c296395a079c.jpeg" alt="Joining"></div>
         </div>
     </section>
 
@@ -368,7 +368,7 @@
     </section>
 
     <footer>
-        <img src="https://generous-gray-tmipyfxyr7.edgeone.app/logo.png" alt="Logo" style="height: 60px; opacity: 0.5; margin-bottom: 20px;">
+        <img src="https://image2url.com/r2/default/images/1767247367878-b1c5d043-c78d-4c17-99fc-65978567deef.png" alt="Logo" style="height: 60px; opacity: 0.5; margin-bottom: 20px;">
         <p style="color: #444; font-size: 0.9rem;">&copy; 2025 Killstreak Esports. Play Responsibly.</p>
     </footer>
 
@@ -393,4 +393,5 @@
 </body>
 
 </html>
+
 
