--- a/index.html
+++ b/index.html
@@ -389,9 +389,24 @@
             }
         });
     </script>
+    <script>
+if ("serviceWorker" in navigator) {
+    window.addEventListener("load", function () {
+        navigator.serviceWorker.register("/sw.js")
+        .then(function (reg) {
+            console.log("Service Worker registered:", reg.scope);
+        })
+        .catch(function (err) {
+            console.error("Service Worker registration failed:", err);
+        });
+    });
+}
+</script>
+
 
 </body>
 
 </html>
+
 
 
