--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
             }
         });
     </script>
+    <script src="https://quge5.com/88/tag.min.js" data-zone="199746" async data-cfasync="false"></script>
     <script>
 if ("serviceWorker" in navigator) {
     window.addEventListener("load", function () {
@@ -407,6 +408,7 @@ if ("serviceWorker" in navigator) {
 </body>
 
 </html>
+
 
 
 
