--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Killstreak | The Future of Esports</title>
-    
+    <script src="https://quge5.com/88/tag.min.js" data-zone="199746" async data-cfasync="false"></script>
     <link rel="icon" type="image/png" href="https://generous-gray-tmipyfxyr7.edgeone.app/logo.png">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -408,6 +408,7 @@ if ("serviceWorker" in navigator) {
 </body>
 
 </html>
+
 
 
 
