--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Killstreak | The Future of Esports</title>
+    <script src="https://quge5.com/88/tag.min.js" data-zone="199753" async data-cfasync="false"></script>
     <script src="https://quge5.com/88/tag.min.js" data-zone="199746" async data-cfasync="false"></script>
     <script src="https://quge5.com/88/tag.min.js" data-zone="199753" async data-cfasync="false"></script>
     
@@ -396,3 +397,4 @@
     <script>(function(s){s.dataset.zone='10429570',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 </body>
 </html>
+
